added links to make new appointment or milestone

--- a/app/views/children/show_child.erb
+++ b/app/views/children/show_child.erb
@@ -5,7 +5,11 @@
 <br>
 <br>
 <h3>Next Appointment:</h3>
-
+<p><%= @child.appointments.last %></p>
 <br>
 <br>
 <h3>Latest Milestone:</h3>
+<p><%= @child.milestones.last %></p>
+
+<p><a href="">Make a new Appointment</a></p>
+<p><a href="">Mark a new Milestone!</a></p>
