fix bug for displaying all milestones

--- a/app/views/children/show_child.erb
+++ b/app/views/children/show_child.erb
@@ -23,7 +23,7 @@
   <p>On <%= @milestone.date %></p>
   <% end  %>
   <button><a href="/children/<%= @child.name.downcase %>/milestones/new">Mark a new Milestone!</a></button>
-  <button><a href="/children/<%= @child.name.downcase %>/milestones/">View All Milestones!</a></button>
+  <button><a href="/children/<%= @child.name.downcase %>/milestones">View All Milestones!</a></button>
 
 </div>
 <br>
