reload db and schema

--- a/app/views/children/new_child.erb
+++ b/app/views/children/new_child.erb
@@ -6,7 +6,7 @@
     <br>
     <br>
     <label for="dob">Date of Birth:</label>
-    <input type="datetime" name="dob" id="dob">
+    <input type="date" name="dob" id="dob">
     
     <br>
     <br>
