--- a/app/views/milestones/index_milestone.erb
+++ b/app/views/milestones/index_milestone.erb
@@ -3,7 +3,8 @@
 <br>
 <% @child.milestones.each do |m| %>
 <div>
-    <p>On <%= m.date %> </p>
+    <%= date = DateTime.parse(m.date.to_s) %>
+    <p>On <%= date.strftime('%w - %m/%d/%Y') %> </p>
     <p><%= m.content %></p>
     <b><a href="/children/<%= m.child.name.downcase %>/milestones/<%= m.id%>/edit">Edit this milestone</a></b>
     <br>
