fixed slug usage

--- a/app/views/milestones/edit_milestone.erb
+++ b/app/views/milestones/edit_milestone.erb
@@ -1,6 +1,6 @@
 <h2>Edit Your Childs Milestone:</h2>
 
-<form method="post" action="/children/<%= @milestone.child.name %>/milestones/<%= @milestone.id%>">
+<form method="post" action="/children/<%= @milestone.child.slug %>/milestones/<%= @milestone.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="date" name="date" value="<%= @milestone.date %>">
   <input type="text" name="content" id="content" value="<%= @milestone.content %>">
