--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -2,16 +2,12 @@
   <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
     <h2>Welcome To Tracker Jack</h2>
-
     <div class="content">
       <p>A simple and secure way to track your childs appointments and milestones!</p>
+      <br>
+      <p><a href="/login">Log In!</a></p>
+      <br>
+      <p><a href="/signup">Sign Up!</a></p>
     </div>
-
-    <div>
-      <p><a href="/login"></a>Log In!</p>
-      <p><a href="/signup"></a>Sign Up!</p>
-    </div>
-
-
   </div>
 </div>
